<resources>
    <string name="app_name">AndroidProj</string>


    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="duedate">Due date</string>
    <string name="course">Course</string>
    <string name="note">Note</string>
    <string name="addassignment">addAssignment</string>
    <string name="viewassignment">viewAssignment</string>
    <string name="add">Add</string>
</resources>
